clang/test/BSC/Negative/Ownership/RuleCheck/Maple/for/for.cbs
// RUN: %clang_cc1 -verify %s

int rand();
int * _Owned assign();

void func1() {
    int * _Owned a;
    for (int i = 0; i < 10; i++) {
        a = assign(); // expected-error {{assign to _Owned value: `a`}}
    }
} // expected-error {{memory leak of value: `a`}}

void func2() {
    int * _Owned a;
    int * _Owned b;
    for (int i = 0; i < 10; i++) {
        b = assign();
        a = b; // expected-error {{assign to _Owned value: `a`}}
    }
} // expected-error {{memory leak of value: `a`}}

void func3() {
    int * _Owned a;
    int * _Owned b;
    int c;
    for (int i = 0; i < 10; i++) {
        if (c) {
            continue;
        }
        if (c) {
            continue;
        }
        b = assign();
        a = b; // expected-error {{assign to _Owned value: `a`}}
    }
} // expected-error {{memory leak of value: `a`}}

int main() { return 0; }